welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:0: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:4: error: only classes can have declared but undefined members
def flower(c:Color)
    ^FlowerCase:6: error: not found: value c
	{setCouleurBrosse(c)
                          ^